# django_ipfs

./: LICENSE  README.md  manage.py  pyproject.toml
djfsender/: admin.py  apps.py  forms.py  models.py  service.py  urls.py  views.py
djfsender/utilities/: file_name_gen.py  get_hash.py  ipfs.py  save_media_file.py  validate_files.py
djipfs/: asgi.py  settings.py  urls.py  wsgi.py
djipfs/jinja/: filters.py
djipfs/middleware/: remoteAddr.py
djipfs/static/scripts/: main.js
djipfs/static/styles/: main.css  main.css.map
jinja2/: base.html  file-detail.html  form.html  index.html
