[tool.poetry]
name = "django-ipfs"
version = "0.1.0"
description = "guide on django file ipfs storage using pinata"
authors = ["UJ Blockchain"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.2"
django-autoslug = "1.9.9"
django-axes = "6.3.0"
django-cleanup = "8.1.0"
jinja2 = "3.1.3"
pillow = "10.2.0"
psycopg = "3.1.18"
psycopg-binary = "3.1.18"
python-decouple = "3.8"
shortuuid = "1.0.11"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
